# db-context-enrichment

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  crema-configuration.md  gemini-extension.json  go.mod  go.sum  golden_flight_booking_expert.json  golden_property_search_advanced.json  main.py  pyinstaller.spec  pyproject.toml  release-please-config.json
.ci/: build.sh  check_eval_outputs.py  cloudbuild-oneoff.yaml  cloudbuild.yaml  run_claude_code.sh  run_claude_eval.sh  run_eval.sh  run_gemini_cli.sh
.claude-plugin/: marketplace.json
autoctx/: state.md  tools.yaml
bootstrap/: bootstrap_generator.py
cmd/: add_comments.go  apply_comments.go  delete_comments.go  get_comments.go  root.go
commands/: generate_targeted_templates.toml  generate_targeted_value_searches.toml
common/: context_mutator.py  parameterizer.py
dev-plugin/: CLAUDE.md  GEMINI.md  gemini-extension.json
mcp/: .gitignore  GEMINI.md  README.md  batch_convert_goldens.md  batch_convert_goldens.py  choose.sql  main.py  package-lock.json  pyinstaller.spec  pyproject.toml
mcp/bootstrap/: context_generator.py
mcp/commands/autoctx/: evaluate.toml
mcp/common/: config.py  parameterizer.py
mcp/db_context_authoring_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mcp/db_context_enrichment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp/db_context_enrichment_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mcp/evaluate/: evaluate_generator.py  result_reader.py
mcp/evaluate/db_generators/: alloydb.py  base.py  mysql.py  postgres.py  spanner.py
mcp/facet/: facet_generator.py
mcp/fragment/: fragment_generator.py
mcp/model/: context.py
mcp/prompts/: __init__.py  bulk_templates.py  context_bootstrap.py  targeted_facets.py  targeted_templates.py  targeted_value_search.py
mcp/skills/autoctx-bootstrap/: SKILL.md
mcp/skills/autoctx-dataset-generation/: SKILL.md
mcp/skills/autoctx-evaluate/: SKILL.md
mcp/skills/autoctx-evaluate/references/: alloydb-postgres.md  cloud-sql-mysql.md  cloud-sql-postgres.md  spanner.md
mcp/skills/autoctx-hillclimb/: SKILL.md
mcp/skills/autoctx-init/: SKILL.md
mcp/skills/autoctx-init/references/: alloydb-postgres.md  cloud-sql-mysql.md  cloud-sql-postgres.md  spanner.md
mcp/skills/ctx-dataset-generator/: SKILL.md
mcp/skills/database-connectivity/: SKILL.md
mcp/template/: parameterizer.py  question_generator.py  template_generator.py
mcp/tests/: batch_convert_goldens_test.py  main_test.py
mcp/tests/bootstrap/: context_generator_test.py
mcp/tests/common/: config_test.py
mcp/tests/evaluate/: evaluate_generator_test.py  result_reader_test.py
mcp/tests/evaluate/db_generators/: alloydb_test.py  base_test.py  mysql_test.py  postgres_test.py
mcp/tests/facet/: facet_generator_test.py
mcp/tests/fragment/: fragment_generator_test.py
mcp/tests/template/: question_generator_test.py  template_generator_test.py
mcp/tests/value_index/: generator_test.py
mcp/tests/value_search/: generator_test.py  match_templates_test.py
mcp/value_index/: generator.py  match_templates.py
mcp/value_search/: generator.py  match_templates.py
(+496 files in other folders)
