[project]
name = "google-cloud-db-context-engineering"
version = "0.6.1"
description = "A FastMCP server for generating natural language to SQL templates from database schemas."
readme = "README.md"
requires-python = ">=3.12"
# Pinned to exact versions because this project is distributed as a standalone application.
dependencies = [
    "fastmcp==3.3.1",
    "google-genai==1.46.0",
    "toolbox-core==0.5.2",
    "google-cloud-geminidataanalytics==0.11.0",
    "google-auth==2.41.1",
    "requests==2.33.0",
]

[project.scripts]
google-cloud-db-context-engineering = "google.cloud.db_context_enrichment.main:mcp.run"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["google.cloud.db_context_enrichment*"]

[tool.pytest.ini_options]
pythonpath = "src"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyinstaller>=6.18.0",
    "ruff>=0.15.12",
]

[tool.db-context-engineering]
toolbox_version = "1.4.0"
evalbench_version = "1.9.0"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["google.cloud.db_context_enrichment"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
